# BitrixTest

./: .gitignore  README.md  avg_by_gender.csv  testdb.py
codetest/: bdcomplete.py  create_csv_files.py  initbd.py
codetest/templates/: base.html  index.html  table.html
misc/: superheroes.db  tall_strong_heroes.csv  top_strength.csv
superheroapp/: pyproject.toml  run.py
superheroapp/app/: __init__.py  config.py  models.py  routes.py  utils.py
superheroapp/app/templates/: base.html  index.html  table.html
superheroapp/instance/: superheroes.db
tgbot/: pyproject.toml  run.py  tgbot.py
tgbot/app/: __init__.py  config.py  handlers.py  models.py  routes.py
tgbot_old/: tgbot.py
tgbot_v2/app/: __init__.py  routes.py
