[tool.poetry]
name = "tgbot"
version = "0.2.0"
description = "1st task for hwschool_test"
authors = ["2rage <the2rage@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.13"
requests = "^2.31.0"

[tool.poetry.scripts]
tgbot = "tgbot.run:main"

[[tool.poetry.packages]]
include = "app"

[[tool.poetry.packages]]
include = "run.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"